# flameforge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
examples/: sample_alpaca.jsonl  sample_chat.jsonl  sample_text.txt
src/flameforge/: __init__.py  __main__.py  app.py  config.py  constants.py
src/flameforge/data/: __init__.py  detector.py  formatter.py  loader.py  templates.py  validator.py
src/flameforge/device/: __init__.py  detector.py  memory.py
src/flameforge/export/: __init__.py  convert.py  merge.py
src/flameforge/models/: __init__.py  cuda_loader.py  loader.py  mlx_loader.py  registry.py
src/flameforge/training/: __init__.py  base.py  callbacks.py  cuda_trainer.py  hyperparams.py  mlx_trainer.py
src/flameforge/ui/: __init__.py  state.py
src/flameforge/ui/screens/: __init__.py  auth.py  config_edit.py  data_load.py  export.py  method_select.py  model_select.py  training.py  welcome.py
src/flameforge/ui/styles/: app.tcss
src/flameforge/ui/widgets/: __init__.py  data_preview.py  loss_chart.py  memory_bar.py  metrics_panel.py  stage_bar.py
src/flameforge/utils/: __init__.py  errors.py  hf_utils.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_data_detector.py  test_data_formatter.py  test_device_detector.py  test_export.py  test_hf_utils.py  test_hyperparams.py  test_model_loader.py  test_model_registry.py  test_training.py  test_ui_data_load.py  test_ui_export.py  test_ui_model_method.py  test_ui_training.py  test_ui_welcome.py  test_widgets.py
